# ezbids_docker

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  EverythingDockerfile  Makefile  README.md  benchmark_dicom_readers.py  build-sifs.sh  cleanup.sh  create_self_signed_certs.sh  docker-compose-dev.yaml  docker-compose-nginx.yml  docker-compose-production.yml  docker-compose.yml  example.env  launch.sh  package-lock.json  package.json  presort_dicoms.py  setup.sh
.github/: dependabot.yml
.github/scripts/: util_free_space.sh
.github/workflows/: apptainer-build-local.yml  collect-test-data.yml  dependabot.yml  docker-build-everything-image.yaml  docker-build-local.yml  docker-build-nginx.yml  test-upload-local.yml  test-upload-nginx.yml
api/: config.ts  package-lock.json  package.json  start.sh  tsc.sh
apptainer/: .gitignore  README.md  dev_apptainer.sh  mongo_host  package-lock.json  run_apptainer.sh  start_api.sh  start_handler.sh  start_mongodb.sh  start_telementry.sh  start_ui.sh  stop.sh  stop_apptainer.sh
handler/: Dockerfile  bids.sh  config.ts  convert.js  convert.js.map  convert.ts  find_img_data.py  handler.js  handler.js.map  handler.ts  preprocess.sh  presort_dicoms.py  start.sh  telemetry.py
handler/ezBIDS_core/: createThumbnailsMovies.py  (+1 more)
nginx/: apptainer_nginx.conf  production_nginx.conf
test/: browser.py  cleantestdata  createmixedfolder  gettestdata  pyproject.toml  upload_flat_folder_of_dicoms.py  utilities.py
ui/: Dockerfile  Dockerfile-production  components.d.ts  entrypoint.sh  package-lock.json  package.json  vite.config.ts
(+5 files in other folders)
