[project]
name = "ezbids-functional-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "pyautogui>=0.9.54",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "urllib3>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
'''
